--- a/experiments.html
+++ b/experiments.html
@@ -189,7 +189,7 @@
 	<body onload="homePageInit()">
 		<header>
 			<div class="container">
-				<h2 class="docs-header"> Elias Gajo - Experiments</h2>
+				<h2 class="docs-header"> Elias Gajo - Experiments for 2D gas sensors fabrication</h2>
 			</div>
 		</header>
 		<section>
@@ -207,8 +207,16 @@
 					
 				</ul>
 				<div class="docs-content">
-					<h2> Presentation of the chips</h2>
-					<h3 id="box"> Box containing all the chips</h3>
+					<h2>Presentation of the chips</h2>
+					<p>we have 3 different type of chips in the experiment box. 
+						<ul>
+							<li>The chips called "test" are used to test the lift-off process and to determine 
+							the best set of parameters for the final chips.</li>
+							<li>The chips called "sample" will contain the final gas sensors.</li>
+							<li>The chips called "E" contain the transferred flakes of 2D material.</li>
+						</ul>
+					  </p>
+					<h3 id="box">Box containing all the chips</h3>
 					<table style="border-collapse: collapse;">
 						<tr class="presentation">
 							<td onclick="goToPage('sample/T1.html')">test1</td>
