test chips done

--- a/experiments.html
+++ b/experiments.html
@@ -33,6 +33,7 @@
 				border:2px solid black;
 				height:80px;
 				text-align: center;
+				width:15%;
 			}
 
 			.presentation td:hover
@@ -189,7 +190,7 @@
 	<body onload="homePageInit()">
 		<header>
 			<div class="container">
-				<h2 class="docs-header"> Elias Gajo - Experiments for 2D gas sensors fabrication</h2>
+				<h2 class="docs-header"> Elias Gajo - Experiments</h2>
 			</div>
 		</header>
 		<section>
