--- a/sample/T4.html
+++ b/sample/T4.html
@@ -33,6 +33,7 @@
 				border:2px solid black;
 				height:80px;
 				text-align: center;
+				width:15%;
 			}
 
 			.presentation td:hover
@@ -279,7 +280,7 @@
 					<hr>
 					<h2>Test 4</h2>
 					<p>
-						 This <a href="#PPA">chip</a> is used for the lift-off training. We will hence pattern some shapes and test the etching at different times. Then, we will extract  the best parameters to use for the final device lift-off process.
+						 This chip is used for the lift-off training. We will hence pattern some shapes and test the etching at different times. Then, we will extract  the best parameters to use for the final device lift-off process.
 					</p>
 					<h3 id="compo" class="subsection" onclick="return toggleMe('compo_display')"> Composition before patterning</h3>
 					<div class="table100 ver1" id="compo_display">
