--- a/sample/T2.html
+++ b/sample/T2.html
@@ -33,6 +33,7 @@
 				border:2px solid black;
 				height:80px;
 				text-align: center;
+				width:15%;
 			}
 
 			.presentation td:hover
@@ -279,7 +280,7 @@
 					<hr>
 					<h2>Test 2</h2>
 					<p>
-						 This <a href="#PPA">chip</a> is used for the lift-off training. We will hence pattern some shapes and test the etching at different times. Then, we will extract  the best parameters to use for the final device lift-off process.
+						 This chip is used for the lift-off training. We will hence pattern some shapes and test the etching at different times. Then, we will extract  the best parameters to use for the final device lift-off process.
 					</p>
 					<h3 id="compo" class="subsection" onclick="return toggleMe('compo_display')"> Composition before patterning</h3>
 					<div class="table100 ver1" id="compo_display">
@@ -365,7 +366,7 @@
 							To try to find the best parameters, we need to care about the time of etching as well as the depth of the patterned shapes. To do so, 
 							we will test 3 different thicknesses.
 						</p>
-						<h4>30 nm deep patterns</h5>
+						<h4>30 nm target depth patterns</h5>
 						<div style="position:relative; width:100%; height:450px;">
 							<div style="position:absolute; top:0px; left:0px; width:50%; height:450px;">
 								<p style="text-align:center;"><U>Pattern 1</U></p>
@@ -396,7 +397,7 @@
 							</div>
 						</div>
 						
-						<h4>35 nm deep patterns</h5>
+						<h4>35 nm target depth patterns</h5>
 						<div style="position:relative; width:100%; height:450px;">
 							<div style="position:absolute; top:0px; left:0px; width:50%; height:450px;">
 								<p style="text-align:center;"><U>Pattern 3</U></p>
@@ -427,7 +428,7 @@
 							</div>
 						</div>
 						
-						<h4>40 nm deep patterns</h5>
+						<h4>40 nm target depth patterns</h5>
 						<div style="position:relative; width:100%; height:450px;">
 							<div style="position:absolute; top:0px; left:0px; width:50%; height:450px;">
 								<p style="text-align:center;"><U>Pattern 5</U></p>
