--- a/experiments.html
+++ b/experiments.html
@@ -203,7 +203,7 @@
 					<li><strong><a href="sample/T2.html">Test 2</a></strong></li>
 					<li><strong><a href="sample/T3.html">Test 3</a></strong></li>
 					<li><strong><a href="sample/T4.html">Test 4</a></strong></li>
-					<li><strong>Sample 1</strong></li>
+					<li><strong><a href="sample/S1.html">Sample 1</a></strong></li>
 					<li><strong>Sample 2</strong></li>
 					
 				</ul>
