--- a/sample/T2.html
+++ b/sample/T2.html
@@ -153,6 +153,7 @@
 			idList[4] = "pattern_display";
 			idList[5] = "wetEtch_display";
 			idList[6] = "electrode_display";
+			idList[7] = "discussion_display";
 			var homePageIdNb = [];
 			homePageIdNb[0] = 0;
 			
@@ -252,6 +253,7 @@
 					<li><a href="#pattern">PPA patterning</a></li>
 					<li><a href="#wetEtch">Wet etching</a></li>
 					<li><a href="#electrode">Electrode deposition</a></li>
+					<li><a href="#discussion">Discussion</a></li>
 				</ul>
 				<div class="docs-content">
 					<h2>Presentation of the chips</h2>
@@ -266,7 +268,7 @@
 							<td>-</td>
 						</tr>
 						<tr class="presentation">
-							<td>sample1</td>
+							<td onclick="goToPage('S1.html')">sample1</td>
 							<td>sample2</td>
 							<td>E4</td>
 							<td>E3</td>
@@ -491,6 +493,16 @@
 						<img src="../image/img_elias/test2/evap.PNG" style="position:relative; max-width:80%; left:10%;"></img>
 						<legend style="text-align: center;">Optical microscope image of the sample after the evaporation and lift-off.
 						</legend>
+					</div>
+					
+					<h3 id="discussion" class="subsection" onclick="return toggleMe('discussion_display')"> Discussion</h3>
+					<div id="discussion_display">
+						<p>
+							After the t-SPL patterning, we remark that some parts of the holes are not deep enough (smaller than the theoretical thickness of the PPA). That is the case 
+							for example for P1 and P3. That is why after the wet etching, the shape of the holes is nicer on P5 than on P1 and P3. After the evaporation and 
+							lift-off, only a small number of patterns are visible which means that we didn't etch enough. So let's increase the time of etching for the next test
+							samples (test3 and test4).
+						</p>
 					</div>
 				</div>
 			</div>
