--- a/sample/T4.html
+++ b/sample/T4.html
@@ -266,7 +266,7 @@
 							<td>-</td>
 						</tr>
 						<tr class="presentation">
-							<td>sample1</td>
+							<td onclick="goToPage('S1.html')">sample1</td>
 							<td>sample2</td>
 							<td>E4</td>
 							<td>E3</td>
