--- a/sample/T1.html
+++ b/sample/T1.html
@@ -479,14 +479,10 @@
 					<h3 id="electrode" class="subsection" onclick="return toggleMe('electrode_display')"> Electrode deposition</h3>
 					<div id="electrode_display">
 						<p>
-							To fabricate the electrodes onto the holes induced by the wet etching, we proceed like this (we changed a bit the values):
-							<ul>
-								<li> Evaporation of 40 nm of Cr</li>
-								<li> Evaporation of 20 nm of Au</li>
-							</ul>
+							To fabricate the electrodes onto the holes induced by the wet etching, we first evaporate around 40 nm of Cr with the evaporator of the lab.
 							Then, we remove the PPA and PMGI layers by lift-off.
 							<ul>
-								<li> Sample immersed into a ... solution during around 30 seconds</li>
+								<li> Sample immersed into the Remover 1165 solution during around 30 seconds</li>
 								<li> Sonication at a power of 2 W during 1 minute</li>
 							</ul>
 						</p>
@@ -501,7 +497,7 @@
 							The results show that the deeper the patterns are, the better the etching is. Indeed, if we consider the pattern5, we can see that after the t-SPL
 							patterning, all the holes are deeper than 32 nm (the theoretical thickness of the PPA), hence the wet etching works well. We also see that the time 
 							of etching is sufficient so that we can see the holes appear, but the evaporation and lift-off lack precision. We will try to improve that by increasing 
-							a bit the etching time on the other test samples (test2, test3, and test4).
+							a bit the etching time on the other test samples (<a href="T2.html">test2</a>, <a href="T3.html">test3</a>, and <a href="T4.html">test4</a>).
 						</p>
 					</div>
 				</div>
