--- a/sample/T2.html
+++ b/sample/T2.html
@@ -479,14 +479,10 @@
 					<h3 id="electrode" class="subsection" onclick="return toggleMe('electrode_display')"> Electrode deposition</h3>
 					<div id="electrode_display">
 						<p>
-							To fabricate the electrodes onto the holes induced by the wet etching, we proceed like this (we changed a bit the values):
-							<ul>
-								<li> Evaporation of 40 nm of Cr</li>
-								<li> Evaporation of 20 nm of Au</li>
-							</ul>
+							To fabricate the electrodes onto the holes induced by the wet etching, we first evaporate around 40 nm of Cr with the evaporator of the lab.
 							Then, we remove the PPA and PMGI layers by lift-off.
 							<ul>
-								<li> Sample immersed into a ... solution during around 30 seconds</li>
+								<li> Sample immersed into the Remover 1165 solution during around 30 seconds</li>
 								<li> Sonication at a power of 2 W during 1 minute</li>
 							</ul>
 						</p>
@@ -501,7 +497,7 @@
 							After the t-SPL patterning, we remark that some parts of the holes are not deep enough (smaller than the theoretical thickness of the PPA). That is the case 
 							for example for P1 and P3. That is why after the wet etching, the shape of the holes is nicer on P5 than on P1 and P3. After the evaporation and 
 							lift-off, only a small number of patterns are visible which means that we didn't etch enough. So let's increase the time of etching for the next test
-							samples (test3 and test4).
+							samples (<a href="T3.html">test3</a> and <a href="T4.html">test4</a>).
 						</p>
 					</div>
 				</div>
