--- a/sample/T3.html
+++ b/sample/T3.html
@@ -479,16 +479,12 @@
 					<h3 id="electrode" class="subsection" onclick="return toggleMe('electrode_display')"> Electrode deposition</h3>
 					<div id="electrode_display">
 						<p>
-							To fabricate the electrodes onto the holes induced by the wet etching, we proceed like this (we changed a bit the values):
-							<ul>
-								<li> Evaporation of 40 nm of Cr</li>
-								<li> Evaporation of 20 nm of Au</li>
-							</ul>
+							To fabricate the electrodes onto the holes induced by the wet etching, we first evaporate around 40 nm of Cr with the evaporator of the lab.
 							Then, we remove the PPA and PMGI layers by lift-off.
 							<ul>
-								<li> Sample immersed into a ... solution during around 30 seconds</li>
-								<li> Sonication at a power of 2 W during 1 minute</li>
-								<li> Sonication at a power of 3 W during 1 minute</li>
+								<li> Sample immersed into the Remover 1165 solution during around 30 seconds</li>
+								<li> Sonication at a power of 2 during 1 minute</li>
+								<li> Sonication at a power of 3 during 1 minute</li>
 							</ul>
 						</p>
 						<img src="../image/img_elias/test3/evap.PNG" style="position:relative; max-width:80%; left:10%;"></img>
@@ -502,7 +498,7 @@
 							The t-SPL patterns are almost the same, regardless of the target depth. We notice only a little difference in depth between P1 and P3 and almost
 							no difference between P3 and P5. This finding allows us to ensure that the holes go through all the PPA layer (for P3 and P5). That is also why we see almost no difference
 							between the patterns after the wet etching. The results after the evaporation and lift-off are nice. In P2, one hole doesn't appear so we probably don't 
-							overetch. Let's see what happen when we increase again the etching time (test 4).
+							overetch. Let's see what happen when we increase again the etching time (<a href="T4.html">test4</a>).
 						</p>
 					</div>
 				</div>
