--- a/sample/T4.html
+++ b/sample/T4.html
@@ -236,14 +236,13 @@
 	<body onload="homePageInit()">
 		<header>
 			<div class="container">
-				<h2 class="docs-header"> Elias Gajo - Experiments</h2>
+				<h2 class="docs-header"> Ana, Elias - Experiments</h2>
 			</div>
 		</header>
 		<section>
 			<div class="container">
 				<ul class="docs-nav" id="menu-left">
-					<li><strong>Presentation of the chips</strong></li>
-					<li><a href="../experiments.html">Box containing all the chips</a></li>
+					<li><a href="../experiments.html"><strong>Home page</strong></a></li>
 					<li class="separator"></li>
 					<li><strong>Test 4</strong></li>
 					<li><a href="#compo">Composition before patterning</a></li>
@@ -269,7 +268,7 @@
 						</tr>
 						<tr class="presentation">
 							<td onclick="goToPage('S1.html')">sample1</td>
-							<td>sample2</td>
+							<<td onclick="goToPage('S2.html')">sample2</td>
 							<td>E4</td>
 							<td>E3</td>
 							<td>E2</td>
